--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,17 @@
     "test": "mocha --exit"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "ipfs-http-client": "^59.0.0",
-    "body-parser": "^1.20.2"
+    "joi": "^18.0.1"
   },
   "devDependencies": {
-    "mocha": "^10.2.0",
-    "chai": "^4.3.7"
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0"
   }
 }
