--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "ipfs-http-client": "^59.0.0",
-    "joi": "^18.0.1"
+    "joi": "^18.0.1",
+    "web3.storage": "^4.5.5"
   },
   "devDependencies": {
     "chai": "^4.3.7",
