feat: Prepare project for deployment
- Add environment configuration system with .env.example templates
- Replace all hardcoded localhost URLs with environment variables
- Create config.js for centralized frontend configuration
- Update backend CORS to support multiple origins
- Add deployment configs for Vercel and Netlify
- Create comprehensive DEPLOYMENT_GUIDE.md with step-by-step instructions
- Improve .gitignore security for sensitive files
- Ready for Sepolia testnet deployment

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,12 @@ npm-debug.log*
 logs
 *.log
 
-# Env
+# Environment variables (NEVER commit these!)
 .env
-.env.*
+.env.local
+.env.*.local
+backend/.env
+frontend/.env
 
 # Build artifacts
 build/
@@ -25,5 +28,8 @@ frontend/dist/
 # Ganache database
 ganache_db/
 
-#secrets
+# Secrets (NEVER commit these!)
 pinata_secrets.txt
+*.pem
+*.key
+private_keys.txt
