--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "client": "cd frontend && npm start"
   },
   "devDependencies": {
-    "concurrently": "^8.0.0"
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@truffle/hdwallet-provider": "^2.1.15",
+    "concurrently": "^8.0.0",
+    "hardhat": "^3.0.15",
+    "truffle": "^5.11.5"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3"
-  }
+  },
+  "type": "module"
 }
