--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "web3": "^4.16.0"
   },
   "devDependencies": {
-    "vite": "^7.3.1",
-    "@vitejs/plugin-react": "^5.0.0"
+    "@vitejs/plugin-react": "^5.0.0",
+    "vite": "^7.3.1"
   }
 }
