--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "concurrently": "^8.0.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.3"
+    "@openzeppelin/contracts": "^4.9.3",
+    "form-data": "^3.0.4",
+    "tar": "^7.5.7"
   },
-  "type": "module"
+  "type": "module",
+  "overrides": {
+    "qs": "^6.14.1",
+    "tar": "^7.5.3"
+  }
 }
